@@ -12,7 +12,6 @@ import org.bukkit.entity.Player;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 
@@ -44,7 +43,9 @@ public class BPBankTop {
 
             bankTop.clear();
             for (int i = 1; i <= ConfigValues.getBankTopSize(); i++) {
-                BankTopPlayer highestPlayerBal = players.getFirst();
+                if (players.isEmpty()) break;
+
+                BankTopPlayer highestPlayerBal = players.get(0);
 
                 for (BankTopPlayer player : players)
                     if (player.getBalance().compareTo(highestPlayerBal.getBalance()) > 0)
