@@ -9,7 +9,7 @@ import org.bukkit.plugin.Plugin;
 import javax.net.ssl.HttpsURLConnection;
 import java.io.*;
 import java.lang.reflect.Method;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.Callable;
@@ -39,13 +39,13 @@ public class bStats {
             config.addDefault("logFailedRequests", false);
             config.addDefault("logSentData", false);
             config.addDefault("logResponseStatusText", false);
-            config.options()
-                    .header("bStats (https://bStats.org) collects some basic information for plugin authors, like how\n"
-                            + "many people use their plugin and their total player count. It's recommended to keep bStats\n"
-                            + "enabled, but if you're not comfortable with this, you can turn this setting off. There is no\n"
-                            + "performance penalty associated with having metrics enabled, and data sent to bStats is fully\n"
-                            + "anonymous.")
-                    .copyDefaults(true);
+            config.options().setHeader(List.of(
+                    "bStats (https://bStats.org) collects some basic information for plugin authors, like how",
+                    "many people use their plugin and their total player count. It's recommended to keep bStats",
+                    "enabled, but if you're not comfortable with this, you can turn this setting off. There is no",
+                    "performance penalty associated with having metrics enabled, and data sent to bStats is fully",
+                    "anonymous."));
+            config.options().copyDefaults(true);
             try {
                 config.save(configFile);
             } catch (IOException ignored) {
@@ -77,7 +77,7 @@ public class bStats {
     }
 
     private void appendServiceData(JsonObjectBuilder builder) {
-        builder.appendField("pluginVersion", plugin.getDescription().getVersion());
+        builder.appendField("pluginVersion", plugin.getPluginMeta().getVersion());
     }
 
     private int getPlayerAmount() {
@@ -241,7 +241,7 @@ public class bStats {
         private void sendData(JsonObjectBuilder.JsonObject data) throws Exception {
             if (logSentData) infoLogger.accept("Sent bStats metrics data: " + data.toString());
             String url = String.format(REPORT_URL, platform);
-            HttpsURLConnection connection = (HttpsURLConnection) new URL(url).openConnection();
+            HttpsURLConnection connection = (HttpsURLConnection) URI.create(url).toURL().openConnection();
             byte[] compressedData = compress(data.toString());
             connection.setRequestMethod("POST");
             connection.addRequestProperty("Accept", "application/json");
